Started with page structure and navigation bar

--- a/index.html
+++ b/index.html
@@ -6,5 +6,43 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+
+        <div class="navbar">
+            <div class="navbar-container">
+                <div class="logo-and-free">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img class="img-logo" src="images/qmpnglogo.png" alt="QM logo">
+                        </a>
+                    </div>
+                    <div class="free">
+                        <a href="#">Besplatan cas</a>
+                    </div>
+                </div>
+                <div class="main-list">
+                    <ul class="navbar-links">
+                        <li id="first-link"><a href="#">Pocetna</a></li>
+                        <li><a href="#">Galerija</a></li>
+                        <li><a href="#">Kalkulatori</a></li>
+                        <li><a href="#">Kontakt</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="top-background"></div>
+
+        <div class="mid-container">
+            <div class="mid-left-container"></div>
+            <div class="mid-center-container"></div>
+            <div class="mid-right-container"></div>
+        </div>
+
+        <div class="footer">
+            <div class="footer-far-left"></div>
+            <div class="footer-mid-left"></div>
+            <div class="footer-mid-right"></div>
+            <div class="footer-far-right"></div>
+        </div>
+
     </body>
