--- a/proba.html
+++ b/proba.html
@@ -3,7 +3,7 @@
     <head>
         <title>Quick Maths-Proba</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style_proba.css">
     </head>
     <body>
         <div class="image">
