Scroll effect and mid section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,24 @@
         <div class="top-background"></div>
 
         <div class="mid-container">
-            <div class="mid-left-container"></div>
-            <div class="mid-center-container"></div>
-            <div class="mid-right-container"></div>
+            <div class="mid-left-container">
+                <div class="mid-image-overlay">
+                    <div class="mid-title">Osnovci</div>
+                    <div class="mid-description">Elementary school math tutors may work with students who are struggling with math.</div>
+                </div>
+            </div>
+            <div class="mid-center-container">
+                <div class="mid-image-overlay">
+                    <div class="mid-title">Srednjoskolci</div>
+                    <div class="mid-description">High school math tutors may work with students who are struggling with math.</div>
+                </div>
+            </div>
+            <div class="mid-right-container">
+                <div class="mid-image-overlay">
+                    <div class="mid-title">Studenti</div>
+                    <div class="mid-description">University math tutors may work with students who are struggling with math.</div>
+                </div>
+            </div>
         </div>
 
         <div class="footer">
@@ -45,4 +60,7 @@
             <div class="footer-far-right"></div>
         </div>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="app.js"></script>
     </body>
+</html>
