--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Quick Maths</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/26d4a64054.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     </head>
     <body>
 
@@ -21,10 +23,10 @@
                 </div>
                 <div class="main-list">
                     <ul class="navbar-links">
-                        <li id="first-link"><a href="#">Pocetna</a></li>
-                        <li><a href="#">Galerija</a></li>
-                        <li><a href="#">Kalkulatori</a></li>
-                        <li><a href="#">Kontakt</a></li>
+                        <li id="first-link"><a href="index.html">Pocetna</a></li>
+                        <li><a href="galerija.html">Galerija</a></li>
+                        <li><a href="kalkulatori.html">Kalkulatori</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,28 +38,84 @@
             <div class="mid-left-container">
                 <div class="mid-image-overlay">
                     <div class="mid-title">Osnovci</div>
-                    <div class="mid-description">Elementary school math tutors may work with students who are struggling with math.</div>
+                    <div class="mid-description">Dopunski casovi za ucenike koji zele bolje ocene. <br>
+                        Dodatni casovi kao priprema za takmicenja. <br>
+                        Pripremni casovi za polaganje prijemnog ispita <br> za upis u srednju skolu.
+                    </div>
                 </div>
             </div>
             <div class="mid-center-container">
                 <div class="mid-image-overlay">
                     <div class="mid-title">Srednjoskolci</div>
-                    <div class="mid-description">High school math tutors may work with students who are struggling with math.</div>
+                    <div class="mid-description">Dopunski casovi za sve nivoe srednjoskolske matematike.
+                        Pripremni casovi za polaganje prijemnog ispita <br> za upis na fakultet
+                    </div>
                 </div>
             </div>
             <div class="mid-right-container">
                 <div class="mid-image-overlay">
                     <div class="mid-title">Studenti</div>
-                    <div class="mid-description">University math tutors may work with students who are struggling with math.</div>
+                    <div class="mid-description">Grupni ili samostalni casovi za sve nivoe matematike
+                        kao i za diskretnu matematiku. <br>
+                        Online casovi u dogovoru sa profesorima.
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="footer">
-            <div class="footer-far-left"></div>
-            <div class="footer-mid-left"></div>
-            <div class="footer-mid-right"></div>
-            <div class="footer-far-right"></div>
+            <div class="footer-far-left">
+                <div class="qm-footer-container">
+                    <p class="qm-footer"><a href="index.html">Quick Maths</a></p>
+                </div>
+                <div class="careers-footer-container">
+                    <div class="careers-btn-container">
+                        <button class="careers-btn">
+                            <a href="#">Postani deo naseg tima</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-mid-left">
+                <div class="footer-navigation-container">
+                    <ul>
+                        <li><a href="index.html">Pocetna</a></li>
+                        <li><a href="galerija.html">Galerija</a></li>
+                        <li><a href="kalkulatori.html">Kalkulatori</a></li>
+                        <li><a href="kontakt.html">Kontakt</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-mid-right">
+                <div class="footer-contact-container">
+                    <div class="footer-address">
+                        <i class="fa fa-map-marker-alt"></i> Kraljice Natalije 37
+                    </div>
+                    <div class="footer-email">
+                        <i class="far fa-envelope"></i> quick@maths.com
+                    </div>
+                    <div class="footer-phone">
+                        <i class="fa fa-phone"></i> 062/111-995
+                    </div>
+                </div>
+            </div>
+            <div class="footer-far-right">
+                <div class="footer-follow-container">
+                    <p>Pratite nas</p>
+                    <div class="footer-icon-container">
+                        <div class="footer-ig">
+                            <a href="https//www.instagram.com">
+                                <img src="images/ig-icon.png" alt="Instagram">
+                            </a>
+                        </div>
+                        <div class="footer-fb">   
+                            <a href="facebook.com">
+                                <img src="images/fb-icon.png" alt="Facebook">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
