--- a/galerija.html
+++ b/galerija.html
@@ -23,7 +23,7 @@
                         <div class="free-content">
                             <span class="free-close">&times;</span>
                             <p>Prijavi se!</p>
-                            <form>
+                            <form id="free-form">
                             <label id="personal-info-label">Licne informacije</label><br>
                             <label>Ime i prezime:</label>
                             <input type="text" id="careers-name" placeholder="Petar Petrovic" required>      
