--- a/index.html
+++ b/index.html
@@ -23,32 +23,32 @@
                             <div class="free-content">
                                 <span class="free-close">&times;</span>
                                 <p>Prijavi se!</p>
-                                <form>
-                                <label id="personal-info-label">Licne informacije</label><br>
-                                <label>Ime i prezime:</label>
-                                <input type="text" id="careers-name" placeholder="Petar Petrovic" required>      
-                                <label>Telefon:</label>
-                                <input type="phone" id="careers-phone" placeholder="060/123-4567" required>
-                                <label>Email:</label>
-                                <input type="email" id="careers-email" placeholder="petar@example.com" required>
-                                <label id="personal-info-label">Detalji</label><br>
-                                <label id="level">Nivo:</label>
-                                <select name="level">
-                                    <option value="elementary">Osnovna skola</option>
-                                    <option value="high">Srednja skola</option>
-                                    <option value="university">Fakultet</option>
-                                </select><br>
-                                <label id="type-where">Tip casa:</label>
-                                <select name="type-where">
-                                    <option value="live">Uzivo</option>
-                                    <option value="online">Online</option>
-                                </select><br>
-                                <label id="type-how">Tip casa:</label>
-                                <select name="type-how">
-                                    <option value="private">Privatni cas</option>
-                                    <option value="group">Grupni cas</option>
-                                </select><br>
-                                <input type="submit" value="Posalji" id="careers-submit">
+                                <form id="free-form">
+                                    <label id="personal-info-label">Licne informacije</label><br>
+                                    <label>Ime i prezime:</label>
+                                    <input type="text" id="careers-name" placeholder="Petar Petrovic" required>      
+                                    <label>Telefon:</label>
+                                    <input type="phone" id="careers-phone" placeholder="060/123-4567" required>
+                                    <label>Email:</label>
+                                    <input type="email" id="careers-email" placeholder="petar@example.com" required>
+                                    <label id="personal-info-label">Detalji</label><br>
+                                    <label id="level">Nivo:</label>
+                                    <select name="level">
+                                        <option value="elementary">Osnovna skola</option>
+                                        <option value="high">Srednja skola</option>
+                                        <option value="university">Fakultet</option>
+                                    </select><br>
+                                    <label id="type-where">Tip casa:</label>
+                                    <select name="type-where">
+                                        <option value="live">Uzivo</option>
+                                        <option value="online">Online</option>
+                                    </select><br>
+                                    <label id="type-how">Tip casa:</label>
+                                    <select name="type-how">
+                                        <option value="private">Privatni cas</option>
+                                        <option value="group">Grupni cas</option>
+                                    </select><br>
+                                    <input type="submit" value="Posalji" id="careers-submit">
                                 </form>
                             </div>
                         </div>
@@ -67,7 +67,7 @@
 
         <div class="top-background"></div>
 
-        <div class="mid-container">
+        <div class="mid-container" id="mid-container-id">
             <div class="mid-left-container">
                 <div class="mid-image-overlay">
                     <div class="mid-title">Osnovci</div>
